# data-analytics-tool

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Dockerfile-lightweb  OpenSans-Regular-normal.js  README.md  data-analytics.def  docker-compose-lightweb.yaml  docker-compose.yaml  index.html  package-lock.json  package.json  pnpm-lock.yaml  registerlabels.py  server.py  tests.txt  thing.save  tokenizers-info.md  uploader.html  viewer.html
CATPOC/: README  README.md  index.html  server.py  uploader.html  viewer.html
css/: footer-viewer.css  footer.css  index.css
deployment/: docker-entrypoint.sh  requirements-docs.txt  requirements-hf.txt  requirements-lightweb.txt  requirements-rl.txt  requirements.txt
front/: .env  .gitignore  Dockerfile  Dockerfile-build  Dockerfile-dev  Dockerfile.save  README.md  docker-compose.yml  entrypoint.sh  next.config.js  package-lock.json  package.json  pnpm-lock.yaml
img/: footer.css
scripts/: bicleanerscorer.py  deparquet.py  ngrams.py  (+39 more)
scripts/resources/: README.txt  stopwords.ab  stopwords.ace  stopwords.als  stopwords.as  stopwords.ast  stopwords.awa  stopwords.ayr  stopwords.azb  stopwords.ba  stopwords.ban  stopwords.be  stopwords.bem  stopwords.bho  stopwords.bjn  stopwords.bm  stopwords.bo  stopwords.bs  stopwords.bug  stopwords.ceb  stopwords.cjk  stopwords.co  stopwords.crh  stopwords.dik  stopwords.dyu  stopwords.dz  stopwords.ee  stopwords.fj  stopwords.fo  stopwords.fon  stopwords.fur  stopwords.fuv  stopwords.gaz  stopwords.gd  stopwords.gn  stopwords.hne  stopwords.ht  stopwords.ig  stopwords.ilo  stopwords.jv  (+82 more)
(+1094 files in other folders)
