a
ahecha
añete
añetete
añetehápe
aha
ajapo
akóinte
amo
año
aravo
aranduka
aty
ava
che
chendive
ete
g̃uarã
gua'u
guy
ha
hagua
haguã
hasy
háicha
hína
hova
hóga
i
ijapytepekuéra
ijaty
ijykére
imandu'a
ipehẽngue
iporã
ipy
irundy
itúva
jaha
jajapo
jahecha
jaha
je
jei
jey
jokupyty
jo'a
joaju
joapykuéra
jopara
juru
katu
katui
katupyrýpe
katupyry
ko
ko'ã
ko'ág̃a
ko'ápe
kóva
kuña
kuaapy
